# atlas

./: .env.example  .gitattributes  .github_commit_message.txt  .gitignore  CLAUDE_TRAINING_PROMPT.txt  CLAUDE_TRAINING_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_TO_MAC.md  FINAL_STATUS.md  FREE_TIER_GUIDE.md  GITHUB_COMMIT_README.md  MAC_SETUP.md  Makefile  OPERATIONS_MANUAL.md  PHASE_0_COMPLETE.md  PHASE_1_COMPLETE.md  README.md  README_MAC.md  TRANSFER_TO_MAC.md  USER_GUIDE.md  pyproject.toml  reset_all.sh  restart_backend.sh  setup_mac.sh  start_all.sh  status.sh  stop_all.sh
apps/api/: main.py  requirements.txt
apps/api/routers/: config.py  research.py  websocket.py
apps/web/: package-lock.json  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/dossier/[runId]/: page.tsx
apps/web/src/components/: AgentFeed.tsx
docs/: ARCHITECTURE.md
evals/: README.md
infra/: docker-compose.yml
infra/postgres/: init.sql
workers/: pyproject.toml
