[project]
name = "atlas"
version = "0.1.0"
description = "AI Operating System for Company Intelligence"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.uv.workspace]
members = [
    "packages/schemas",
    "packages/agents",
    "packages/orchestrator",
    "packages/synthesis",
    "packages/llm",
    "packages/debate",
    "workers"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
