[project]
name = "atlas-workers"
version = "0.1.0"
description = "Temporal workers for Atlas (Phase 1+)"
requires-python = ">=3.12"
dependencies = [
    "atlas-schemas",
    "atlas-agents",
    "atlas-orchestrator",
    "temporalio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
